Implemented home, contact, and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<!doctype html>
+<html>
+  <head>
+    <title>Ruby on Rails Tutorial Sample App | About</title>
+  </head>
+  <body>
+    <h1>About</h1>
+    <p>
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+      is a book that teaches Ruby on Rails.  This is the sample
+      application for the Tutorial.
+    </p>
+  </body>
+</html>
