--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!doctype html>
+<html>
+  <head>
+    <title>Ruby on Rails Tutorial Sample App | Contact</title>
+  </head>
+  <body>
+    <h1>Contact</h1>
+    <p>
+      Contact the author, Janet Davis, at 
+      <a href="mailto:davisjan@cs.grinnell.edu">davisjan@cs.grinnell.edu</a>.
+    </p>
+  </body>
+</html>
