--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Ruby on Rails Tutorial Sample App | About</title>
+    <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
   </head>
   <body>
     <h1>About</h1>
