--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,16 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the 
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
-
-<% if !signed_in? %>
+<% if signed_in? %>
+  <h1>What's up?</h1>
+  <%= render 'shared/micropost_form' %>
+  <td class="sidebar round">
+    <%= render 'shared/user_info' %>
+  </td>
+<% else %>
+  <h1>Sample App</h1>
+  <p>
+    This is the home page for the 
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </p>
+  
   <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
 <% end %>
